#
# Copyright (c) 2017-2025 Tencent. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

set(bh_public_header
  include/tencentcloud/bh/v20230418/BhClient.h
  )

set(bh_public_header_model
  include/tencentcloud/bh/v20230418/model/ResetDeviceAccountPasswordResponse.h
  include/tencentcloud/bh/v20230418/model/CreateUserDirectoryResponse.h
  include/tencentcloud/bh/v20230418/model/ModifyAccessWhiteListStatusResponse.h
  include/tencentcloud/bh/v20230418/model/AccessInfo.h
  include/tencentcloud/bh/v20230418/model/ModifyResourceResponse.h
  include/tencentcloud/bh/v20230418/model/BindDeviceAccountPasswordRequest.h
  include/tencentcloud/bh/v20230418/model/DescribeOperationTaskResponse.h
  include/tencentcloud/bh/v20230418/model/DeleteAclsRequest.h
  include/tencentcloud/bh/v20230418/model/ModifyOperationTaskResponse.h
  include/tencentcloud/bh/v20230418/model/DisableIntranetAccessResponse.h
  include/tencentcloud/bh/v20230418/model/ModifyOperationTaskRequest.h
  include/tencentcloud/bh/v20230418/model/DescribeDeviceGroupsResponse.h
  include/tencentcloud/bh/v20230418/model/UserOrg.h
  include/tencentcloud/bh/v20230418/model/DeleteCmdTemplatesResponse.h
  include/tencentcloud/bh/v20230418/model/DeleteDevicesResponse.h
  include/tencentcloud/bh/v20230418/model/ChangePwdTaskInfo.h
  include/tencentcloud/bh/v20230418/model/CreateChangePwdTaskResponse.h
  include/tencentcloud/bh/v20230418/model/DescribeLoginEventRequest.h
  include/tencentcloud/bh/v20230418/model/DeviceAccount.h
  include/tencentcloud/bh/v20230418/model/BindDeviceAccountPasswordResponse.h
  include/tencentcloud/bh/v20230418/model/DescribeChangePwdTaskDetailRequest.h
  include/tencentcloud/bh/v20230418/model/DescribeDepartmentsResponse.h
  include/tencentcloud/bh/v20230418/model/ResetDeviceAccountPasswordRequest.h
  include/tencentcloud/bh/v20230418/model/DescribeAccessWhiteListRulesResponse.h
  include/tencentcloud/bh/v20230418/model/AddUserGroupMembersRequest.h
  include/tencentcloud/bh/v20230418/model/CreateResourceRequest.h
  include/tencentcloud/bh/v20230418/model/ModifyAssetSyncFlagRequest.h
  include/tencentcloud/bh/v20230418/model/DescribeDevicesResponse.h
  include/tencentcloud/bh/v20230418/model/ResetDeviceAccountPrivateKeyResponse.h
  include/tencentcloud/bh/v20230418/model/ResetUserResponse.h
  include/tencentcloud/bh/v20230418/model/CreateAccessWhiteListRuleResponse.h
  include/tencentcloud/bh/v20230418/model/ImportExternalDeviceResponse.h
  include/tencentcloud/bh/v20230418/model/DisableExternalAccessResponse.h
  include/tencentcloud/bh/v20230418/model/DeleteUserGroupMembersRequest.h
  include/tencentcloud/bh/v20230418/model/RunChangePwdTaskRequest.h
  include/tencentcloud/bh/v20230418/model/DescribeAccountGroupsRequest.h
  include/tencentcloud/bh/v20230418/model/ModifyAssetSyncFlagResponse.h
  include/tencentcloud/bh/v20230418/model/DescribeSourceTypesResponse.h
  include/tencentcloud/bh/v20230418/model/DescribeChangePwdTaskDetailResponse.h
  include/tencentcloud/bh/v20230418/model/DeleteUserGroupsResponse.h
  include/tencentcloud/bh/v20230418/model/ModifyAccessWhiteListAutoStatusResponse.h
  include/tencentcloud/bh/v20230418/model/ModifyDeviceRequest.h
  include/tencentcloud/bh/v20230418/model/SearchFileRequest.h
  include/tencentcloud/bh/v20230418/model/ModifyAccessWhiteListRuleResponse.h
  include/tencentcloud/bh/v20230418/model/CreateAccessWhiteListRuleRequest.h
  include/tencentcloud/bh/v20230418/model/AccessWhiteListRule.h
  include/tencentcloud/bh/v20230418/model/SearchFileBySidResult.h
  include/tencentcloud/bh/v20230418/model/SearchCommandRequest.h
  include/tencentcloud/bh/v20230418/model/ImportExternalDeviceRequest.h
  include/tencentcloud/bh/v20230418/model/DescribeResourcesRequest.h
  include/tencentcloud/bh/v20230418/model/BindDeviceResourceResponse.h
  include/tencentcloud/bh/v20230418/model/CreateUserDirectoryRequest.h
  include/tencentcloud/bh/v20230418/model/SetLDAPSyncFlagResponse.h
  include/tencentcloud/bh/v20230418/model/DescribeSecuritySettingRequest.h
  include/tencentcloud/bh/v20230418/model/DeleteUserGroupMembersResponse.h
  include/tencentcloud/bh/v20230418/model/ModifyReconnectionSettingResponse.h
  include/tencentcloud/bh/v20230418/model/CmdTemplate.h
  include/tencentcloud/bh/v20230418/model/SearchCommandResult.h
  include/tencentcloud/bh/v20230418/model/DescribeLDAPUnitSetRequest.h
  include/tencentcloud/bh/v20230418/model/CreateSyncUserTaskResponse.h
  include/tencentcloud/bh/v20230418/model/RunChangePwdTaskDetail.h
  include/tencentcloud/bh/v20230418/model/ModifyOAuthSettingRequest.h
  include/tencentcloud/bh/v20230418/model/CreateUserGroupRequest.h
  include/tencentcloud/bh/v20230418/model/SearchFileTypeFilter.h
  include/tencentcloud/bh/v20230418/model/DisableIntranetAccessRequest.h
  include/tencentcloud/bh/v20230418/model/ReplaySessionRequest.h
  include/tencentcloud/bh/v20230418/model/ModifyAuthModeSettingResponse.h
  include/tencentcloud/bh/v20230418/model/BindDeviceAccountPrivateKeyResponse.h
  include/tencentcloud/bh/v20230418/model/IOAUserGroup.h
  include/tencentcloud/bh/v20230418/model/SearchCommandBySidRequest.h
  include/tencentcloud/bh/v20230418/model/SyncUserToIOAResponse.h
  include/tencentcloud/bh/v20230418/model/DeleteUserDirectoryRequest.h
  include/tencentcloud/bh/v20230418/model/CreateDeviceGroupResponse.h
  include/tencentcloud/bh/v20230418/model/DescribeUserGroupMembersRequest.h
  include/tencentcloud/bh/v20230418/model/OperationEvent.h
  include/tencentcloud/bh/v20230418/model/Department.h
  include/tencentcloud/bh/v20230418/model/AccessDevicesRequest.h
  include/tencentcloud/bh/v20230418/model/DescribeAccessWhiteListRulesRequest.h
  include/tencentcloud/bh/v20230418/model/DescribeUserSyncStatusRequest.h
  include/tencentcloud/bh/v20230418/model/ModifyAccessWhiteListAutoStatusRequest.h
  include/tencentcloud/bh/v20230418/model/ModifyUserGroupResponse.h
  include/tencentcloud/bh/v20230418/model/CreateUserResponse.h
  include/tencentcloud/bh/v20230418/model/DescribeSourceTypesRequest.h
  include/tencentcloud/bh/v20230418/model/DeleteOperationTasksRequest.h
  include/tencentcloud/bh/v20230418/model/AppAsset.h
  include/tencentcloud/bh/v20230418/model/DescribeAssetSyncStatusResponse.h
  include/tencentcloud/bh/v20230418/model/ModifyChangePwdTaskResponse.h
  include/tencentcloud/bh/v20230418/model/DescribeUserGroupsRequest.h
  include/tencentcloud/bh/v20230418/model/DescribeUserDirectoryResponse.h
  include/tencentcloud/bh/v20230418/model/CreateAclRequest.h
  include/tencentcloud/bh/v20230418/model/DescribeLoginEventResponse.h
  include/tencentcloud/bh/v20230418/model/SearchSubtaskResultByIdResponse.h
  include/tencentcloud/bh/v20230418/model/SearchSubtaskResultByIdRequest.h
  include/tencentcloud/bh/v20230418/model/CreateDeviceGroupRequest.h
  include/tencentcloud/bh/v20230418/model/DisableExternalAccessRequest.h
  include/tencentcloud/bh/v20230418/model/RunOperationTaskResponse.h
  include/tencentcloud/bh/v20230418/model/DeleteDeviceGroupMembersRequest.h
  include/tencentcloud/bh/v20230418/model/OperationTask.h
  include/tencentcloud/bh/v20230418/model/SearchCommandResponse.h
  include/tencentcloud/bh/v20230418/model/DescribeChangePwdTaskResponse.h
  include/tencentcloud/bh/v20230418/model/SecuritySetting.h
  include/tencentcloud/bh/v20230418/model/CreateOperationTaskResponse.h
  include/tencentcloud/bh/v20230418/model/CreateAclResponse.h
  include/tencentcloud/bh/v20230418/model/DescribeAclsResponse.h
  include/tencentcloud/bh/v20230418/model/Departments.h
  include/tencentcloud/bh/v20230418/model/ModifyUserRequest.h
  include/tencentcloud/bh/v20230418/model/CreateCmdTemplateResponse.h
  include/tencentcloud/bh/v20230418/model/DeleteOperationTasksResponse.h
  include/tencentcloud/bh/v20230418/model/Command.h
  include/tencentcloud/bh/v20230418/model/ModifyAclRequest.h
  include/tencentcloud/bh/v20230418/model/SearchAuditLogRequest.h
  include/tencentcloud/bh/v20230418/model/PasswordSetting.h
  include/tencentcloud/bh/v20230418/model/CreateResourceResponse.h
  include/tencentcloud/bh/v20230418/model/ModifyResourceRequest.h
  include/tencentcloud/bh/v20230418/model/DeleteUsersResponse.h
  include/tencentcloud/bh/v20230418/model/SearchCommandBySidResponse.h
  include/tencentcloud/bh/v20230418/model/AssetSyncStatus.h
  include/tencentcloud/bh/v20230418/model/DescribeResourcesResponse.h
  include/tencentcloud/bh/v20230418/model/DescribeUsersRequest.h
  include/tencentcloud/bh/v20230418/model/DeployResourceRequest.h
  include/tencentcloud/bh/v20230418/model/EnableExternalAccessResponse.h
  include/tencentcloud/bh/v20230418/model/AssetSyncFlags.h
  include/tencentcloud/bh/v20230418/model/CreateCmdTemplateRequest.h
  include/tencentcloud/bh/v20230418/model/ModifyCmdTemplateResponse.h
  include/tencentcloud/bh/v20230418/model/ModifyUserDirectoryResponse.h
  include/tencentcloud/bh/v20230418/model/ResetDeviceAccountPrivateKeyRequest.h
  include/tencentcloud/bh/v20230418/model/DeleteUserDirectoryResponse.h
  include/tencentcloud/bh/v20230418/model/CreateAssetSyncJobResponse.h
  include/tencentcloud/bh/v20230418/model/BindDeviceAccountPrivateKeyRequest.h
  include/tencentcloud/bh/v20230418/model/ModifyLDAPSettingRequest.h
  include/tencentcloud/bh/v20230418/model/ModifyChangePwdTaskRequest.h
  include/tencentcloud/bh/v20230418/model/CreateAssetSyncJobRequest.h
  include/tencentcloud/bh/v20230418/model/Group.h
  include/tencentcloud/bh/v20230418/model/UnlockUserResponse.h
  include/tencentcloud/bh/v20230418/model/DescribeAssetSyncStatusRequest.h
  include/tencentcloud/bh/v20230418/model/Clb.h
  include/tencentcloud/bh/v20230418/model/AccessDevicesResponse.h
  include/tencentcloud/bh/v20230418/model/DeleteUsersRequest.h
  include/tencentcloud/bh/v20230418/model/DeleteDeviceAccountsRequest.h
  include/tencentcloud/bh/v20230418/model/SearchTaskResultRequest.h
  include/tencentcloud/bh/v20230418/model/AuthModeSetting.h
  include/tencentcloud/bh/v20230418/model/DeleteDeviceGroupMembersResponse.h
  include/tencentcloud/bh/v20230418/model/ModifyDeviceGroupResponse.h
  include/tencentcloud/bh/v20230418/model/ModifyOAuthSettingResponse.h
  include/tencentcloud/bh/v20230418/model/DescribeOperationTaskRequest.h
  include/tencentcloud/bh/v20230418/model/LoginSetting.h
  include/tencentcloud/bh/v20230418/model/DescribeLDAPUnitSetResponse.h
  include/tencentcloud/bh/v20230418/model/DescribeUserGroupMembersResponse.h
  include/tencentcloud/bh/v20230418/model/UserDirectory.h
  include/tencentcloud/bh/v20230418/model/DescribeSecuritySettingResponse.h
  include/tencentcloud/bh/v20230418/model/DescribeDeviceGroupsRequest.h
  include/tencentcloud/bh/v20230418/model/ModifyAccessWhiteListRuleRequest.h
  include/tencentcloud/bh/v20230418/model/SearchSessionCommandResponse.h
  include/tencentcloud/bh/v20230418/model/DeleteAccessWhiteListRulesRequest.h
  include/tencentcloud/bh/v20230418/model/CheckLDAPConnectionRequest.h
  include/tencentcloud/bh/v20230418/model/User.h
  include/tencentcloud/bh/v20230418/model/ResetUserRequest.h
  include/tencentcloud/bh/v20230418/model/Device.h
  include/tencentcloud/bh/v20230418/model/DeleteUserGroupsRequest.h
  include/tencentcloud/bh/v20230418/model/CreateSyncUserTaskRequest.h
  include/tencentcloud/bh/v20230418/model/DescribeAccountGroupsResponse.h
  include/tencentcloud/bh/v20230418/model/SourceType.h
  include/tencentcloud/bh/v20230418/model/CreateDeviceAccountResponse.h
  include/tencentcloud/bh/v20230418/model/ExternalDevice.h
  include/tencentcloud/bh/v20230418/model/SearchSessionRequest.h
  include/tencentcloud/bh/v20230418/model/ModifyDeviceGroupRequest.h
  include/tencentcloud/bh/v20230418/model/Domain.h
  include/tencentcloud/bh/v20230418/model/Filter.h
  include/tencentcloud/bh/v20230418/model/DescribeUsersResponse.h
  include/tencentcloud/bh/v20230418/model/DeployResourceResponse.h
  include/tencentcloud/bh/v20230418/model/ModifyLDAPSettingResponse.h
  include/tencentcloud/bh/v20230418/model/SyncDevicesToIOAResponse.h
  include/tencentcloud/bh/v20230418/model/DescribeAssetSyncFlagRequest.h
  include/tencentcloud/bh/v20230418/model/CreateUserRequest.h
  include/tencentcloud/bh/v20230418/model/DescribeChangePwdTaskRequest.h
  include/tencentcloud/bh/v20230418/model/SearchFileBySidResponse.h
  include/tencentcloud/bh/v20230418/model/ModifyAuthModeSettingRequest.h
  include/tencentcloud/bh/v20230418/model/DescribeOperationEventRequest.h
  include/tencentcloud/bh/v20230418/model/SetLDAPSyncFlagRequest.h
  include/tencentcloud/bh/v20230418/model/LDAPSetting.h
  include/tencentcloud/bh/v20230418/model/ModifyDeviceResponse.h
  include/tencentcloud/bh/v20230418/model/ModifyUserResponse.h
  include/tencentcloud/bh/v20230418/model/ChangePwdTaskDetail.h
  include/tencentcloud/bh/v20230418/model/SearchSessionResponse.h
  include/tencentcloud/bh/v20230418/model/ModifyCmdTemplateRequest.h
  include/tencentcloud/bh/v20230418/model/CreateOperationTaskRequest.h
  include/tencentcloud/bh/v20230418/model/ModifyAclResponse.h
  include/tencentcloud/bh/v20230418/model/DescribeCmdTemplatesResponse.h
  include/tencentcloud/bh/v20230418/model/UnlockUserRequest.h
  include/tencentcloud/bh/v20230418/model/ReplayInformation.h
  include/tencentcloud/bh/v20230418/model/CreateDeviceAccountRequest.h
  include/tencentcloud/bh/v20230418/model/AddDeviceGroupMembersResponse.h
  include/tencentcloud/bh/v20230418/model/DeleteCmdTemplatesRequest.h
  include/tencentcloud/bh/v20230418/model/EnvInternetAccessSetting.h
  include/tencentcloud/bh/v20230418/model/DescribeUserGroupsResponse.h
  include/tencentcloud/bh/v20230418/model/DescribeUserDirectoryRequest.h
  include/tencentcloud/bh/v20230418/model/SyncUserToIOARequest.h
  include/tencentcloud/bh/v20230418/model/AddUserGroupMembersResponse.h
  include/tencentcloud/bh/v20230418/model/DescribeDeviceAccountsRequest.h
  include/tencentcloud/bh/v20230418/model/DescribeAssetSyncFlagResponse.h
  include/tencentcloud/bh/v20230418/model/DescribeUserSyncStatusResponse.h
  include/tencentcloud/bh/v20230418/model/DeleteChangePwdTaskRequest.h
  include/tencentcloud/bh/v20230418/model/ModifyUserGroupRequest.h
  include/tencentcloud/bh/v20230418/model/TaskResult.h
  include/tencentcloud/bh/v20230418/model/CreateChangePwdTaskRequest.h
  include/tencentcloud/bh/v20230418/model/SearchTaskResultResponse.h
  include/tencentcloud/bh/v20230418/model/SyncDevicesToIOARequest.h
  include/tencentcloud/bh/v20230418/model/LoginEvent.h
  include/tencentcloud/bh/v20230418/model/OAuthSetting.h
  include/tencentcloud/bh/v20230418/model/ReconnectionSetting.h
  include/tencentcloud/bh/v20230418/model/DeleteChangePwdTaskResponse.h
  include/tencentcloud/bh/v20230418/model/CreateUserGroupResponse.h
  include/tencentcloud/bh/v20230418/model/DeleteDevicesRequest.h
  include/tencentcloud/bh/v20230418/model/DescribeDeviceAccountsResponse.h
  include/tencentcloud/bh/v20230418/model/DescribeDomainsRequest.h
  include/tencentcloud/bh/v20230418/model/DescribeCmdTemplatesRequest.h
  include/tencentcloud/bh/v20230418/model/EnableIntranetAccessRequest.h
  include/tencentcloud/bh/v20230418/model/DescribeAclsRequest.h
  include/tencentcloud/bh/v20230418/model/EnableExternalAccessRequest.h
  include/tencentcloud/bh/v20230418/model/DeleteDeviceGroupsRequest.h
  include/tencentcloud/bh/v20230418/model/DescribeDeviceGroupMembersResponse.h
  include/tencentcloud/bh/v20230418/model/SearchAuditLogResponse.h
  include/tencentcloud/bh/v20230418/model/DescribeDepartmentsRequest.h
  include/tencentcloud/bh/v20230418/model/SessionResult.h
  include/tencentcloud/bh/v20230418/model/Resource.h
  include/tencentcloud/bh/v20230418/model/RunChangePwdTaskResponse.h
  include/tencentcloud/bh/v20230418/model/BindDeviceResourceRequest.h
  include/tencentcloud/bh/v20230418/model/CheckLDAPConnectionResponse.h
  include/tencentcloud/bh/v20230418/model/ModifyReconnectionSettingRequest.h
  include/tencentcloud/bh/v20230418/model/RunOperationTaskRequest.h
  include/tencentcloud/bh/v20230418/model/SubtaskResult.h
  include/tencentcloud/bh/v20230418/model/Acl.h
  include/tencentcloud/bh/v20230418/model/TagFilter.h
  include/tencentcloud/bh/v20230418/model/DescribeDevicesRequest.h
  include/tencentcloud/bh/v20230418/model/DepartmentManagerUser.h
  include/tencentcloud/bh/v20230418/model/ACTemplate.h
  include/tencentcloud/bh/v20230418/model/ModifyAccessWhiteListStatusRequest.h
  include/tencentcloud/bh/v20230418/model/SearchSessionCommandRequest.h
  include/tencentcloud/bh/v20230418/model/SearchFileBySidRequest.h
  include/tencentcloud/bh/v20230418/model/DescribeOperationEventResponse.h
  include/tencentcloud/bh/v20230418/model/DescribeDomainsResponse.h
  include/tencentcloud/bh/v20230418/model/EnableIntranetAccessResponse.h
  include/tencentcloud/bh/v20230418/model/ModifyUserDirectoryRequest.h
  include/tencentcloud/bh/v20230418/model/SearchFileResult.h
  include/tencentcloud/bh/v20230418/model/ReplaySessionResponse.h
  include/tencentcloud/bh/v20230418/model/AccountGroup.h
  include/tencentcloud/bh/v20230418/model/DeleteAclsResponse.h
  include/tencentcloud/bh/v20230418/model/DescribeDeviceGroupMembersRequest.h
  include/tencentcloud/bh/v20230418/model/DeleteDeviceGroupsResponse.h
  include/tencentcloud/bh/v20230418/model/AddDeviceGroupMembersRequest.h
  include/tencentcloud/bh/v20230418/model/DeleteDeviceAccountsResponse.h
  include/tencentcloud/bh/v20230418/model/DeleteAccessWhiteListRulesResponse.h
  include/tencentcloud/bh/v20230418/model/SearchFileResponse.h
  )

set(bh_src
  src/v20230418/BhClient.cpp
  src/v20230418/model/ResetDeviceAccountPasswordResponse.cpp
  src/v20230418/model/CreateUserDirectoryResponse.cpp
  src/v20230418/model/ModifyAccessWhiteListStatusResponse.cpp
  src/v20230418/model/AccessInfo.cpp
  src/v20230418/model/ModifyResourceResponse.cpp
  src/v20230418/model/BindDeviceAccountPasswordRequest.cpp
  src/v20230418/model/DescribeOperationTaskResponse.cpp
  src/v20230418/model/DeleteAclsRequest.cpp
  src/v20230418/model/ModifyOperationTaskResponse.cpp
  src/v20230418/model/DisableIntranetAccessResponse.cpp
  src/v20230418/model/ModifyOperationTaskRequest.cpp
  src/v20230418/model/DescribeDeviceGroupsResponse.cpp
  src/v20230418/model/UserOrg.cpp
  src/v20230418/model/DeleteCmdTemplatesResponse.cpp
  src/v20230418/model/DeleteDevicesResponse.cpp
  src/v20230418/model/ChangePwdTaskInfo.cpp
  src/v20230418/model/CreateChangePwdTaskResponse.cpp
  src/v20230418/model/DescribeLoginEventRequest.cpp
  src/v20230418/model/DeviceAccount.cpp
  src/v20230418/model/BindDeviceAccountPasswordResponse.cpp
  src/v20230418/model/DescribeChangePwdTaskDetailRequest.cpp
  src/v20230418/model/DescribeDepartmentsResponse.cpp
  src/v20230418/model/ResetDeviceAccountPasswordRequest.cpp
  src/v20230418/model/DescribeAccessWhiteListRulesResponse.cpp
  src/v20230418/model/AddUserGroupMembersRequest.cpp
  src/v20230418/model/CreateResourceRequest.cpp
  src/v20230418/model/ModifyAssetSyncFlagRequest.cpp
  src/v20230418/model/DescribeDevicesResponse.cpp
  src/v20230418/model/ResetDeviceAccountPrivateKeyResponse.cpp
  src/v20230418/model/ResetUserResponse.cpp
  src/v20230418/model/CreateAccessWhiteListRuleResponse.cpp
  src/v20230418/model/ImportExternalDeviceResponse.cpp
  src/v20230418/model/DisableExternalAccessResponse.cpp
  src/v20230418/model/DeleteUserGroupMembersRequest.cpp
  src/v20230418/model/RunChangePwdTaskRequest.cpp
  src/v20230418/model/DescribeAccountGroupsRequest.cpp
  src/v20230418/model/ModifyAssetSyncFlagResponse.cpp
  src/v20230418/model/DescribeSourceTypesResponse.cpp
  src/v20230418/model/DescribeChangePwdTaskDetailResponse.cpp
  src/v20230418/model/DeleteUserGroupsResponse.cpp
  src/v20230418/model/ModifyAccessWhiteListAutoStatusResponse.cpp
  src/v20230418/model/ModifyDeviceRequest.cpp
  src/v20230418/model/SearchFileRequest.cpp
  src/v20230418/model/ModifyAccessWhiteListRuleResponse.cpp
  src/v20230418/model/CreateAccessWhiteListRuleRequest.cpp
  src/v20230418/model/AccessWhiteListRule.cpp
  src/v20230418/model/SearchFileBySidResult.cpp
  src/v20230418/model/SearchCommandRequest.cpp
  src/v20230418/model/ImportExternalDeviceRequest.cpp
  src/v20230418/model/DescribeResourcesRequest.cpp
  src/v20230418/model/BindDeviceResourceResponse.cpp
  src/v20230418/model/CreateUserDirectoryRequest.cpp
  src/v20230418/model/SetLDAPSyncFlagResponse.cpp
  src/v20230418/model/DescribeSecuritySettingRequest.cpp
  src/v20230418/model/DeleteUserGroupMembersResponse.cpp
  src/v20230418/model/ModifyReconnectionSettingResponse.cpp
  src/v20230418/model/CmdTemplate.cpp
  src/v20230418/model/SearchCommandResult.cpp
  src/v20230418/model/DescribeLDAPUnitSetRequest.cpp
  src/v20230418/model/CreateSyncUserTaskResponse.cpp
  src/v20230418/model/RunChangePwdTaskDetail.cpp
  src/v20230418/model/ModifyOAuthSettingRequest.cpp
  src/v20230418/model/CreateUserGroupRequest.cpp
  src/v20230418/model/SearchFileTypeFilter.cpp
  src/v20230418/model/DisableIntranetAccessRequest.cpp
  src/v20230418/model/ReplaySessionRequest.cpp
  src/v20230418/model/ModifyAuthModeSettingResponse.cpp
  src/v20230418/model/BindDeviceAccountPrivateKeyResponse.cpp
  src/v20230418/model/IOAUserGroup.cpp
  src/v20230418/model/SearchCommandBySidRequest.cpp
  src/v20230418/model/SyncUserToIOAResponse.cpp
  src/v20230418/model/DeleteUserDirectoryRequest.cpp
  src/v20230418/model/CreateDeviceGroupResponse.cpp
  src/v20230418/model/DescribeUserGroupMembersRequest.cpp
  src/v20230418/model/OperationEvent.cpp
  src/v20230418/model/Department.cpp
  src/v20230418/model/AccessDevicesRequest.cpp
  src/v20230418/model/DescribeAccessWhiteListRulesRequest.cpp
  src/v20230418/model/DescribeUserSyncStatusRequest.cpp
  src/v20230418/model/ModifyAccessWhiteListAutoStatusRequest.cpp
  src/v20230418/model/ModifyUserGroupResponse.cpp
  src/v20230418/model/CreateUserResponse.cpp
  src/v20230418/model/DescribeSourceTypesRequest.cpp
  src/v20230418/model/DeleteOperationTasksRequest.cpp
  src/v20230418/model/AppAsset.cpp
  src/v20230418/model/DescribeAssetSyncStatusResponse.cpp
  src/v20230418/model/ModifyChangePwdTaskResponse.cpp
  src/v20230418/model/DescribeUserGroupsRequest.cpp
  src/v20230418/model/DescribeUserDirectoryResponse.cpp
  src/v20230418/model/CreateAclRequest.cpp
  src/v20230418/model/DescribeLoginEventResponse.cpp
  src/v20230418/model/SearchSubtaskResultByIdResponse.cpp
  src/v20230418/model/SearchSubtaskResultByIdRequest.cpp
  src/v20230418/model/CreateDeviceGroupRequest.cpp
  src/v20230418/model/DisableExternalAccessRequest.cpp
  src/v20230418/model/RunOperationTaskResponse.cpp
  src/v20230418/model/DeleteDeviceGroupMembersRequest.cpp
  src/v20230418/model/OperationTask.cpp
  src/v20230418/model/SearchCommandResponse.cpp
  src/v20230418/model/DescribeChangePwdTaskResponse.cpp
  src/v20230418/model/SecuritySetting.cpp
  src/v20230418/model/CreateOperationTaskResponse.cpp
  src/v20230418/model/CreateAclResponse.cpp
  src/v20230418/model/DescribeAclsResponse.cpp
  src/v20230418/model/Departments.cpp
  src/v20230418/model/ModifyUserRequest.cpp
  src/v20230418/model/CreateCmdTemplateResponse.cpp
  src/v20230418/model/DeleteOperationTasksResponse.cpp
  src/v20230418/model/Command.cpp
  src/v20230418/model/ModifyAclRequest.cpp
  src/v20230418/model/SearchAuditLogRequest.cpp
  src/v20230418/model/PasswordSetting.cpp
  src/v20230418/model/CreateResourceResponse.cpp
  src/v20230418/model/ModifyResourceRequest.cpp
  src/v20230418/model/DeleteUsersResponse.cpp
  src/v20230418/model/SearchCommandBySidResponse.cpp
  src/v20230418/model/AssetSyncStatus.cpp
  src/v20230418/model/DescribeResourcesResponse.cpp
  src/v20230418/model/DescribeUsersRequest.cpp
  src/v20230418/model/DeployResourceRequest.cpp
  src/v20230418/model/EnableExternalAccessResponse.cpp
  src/v20230418/model/AssetSyncFlags.cpp
  src/v20230418/model/CreateCmdTemplateRequest.cpp
  src/v20230418/model/ModifyCmdTemplateResponse.cpp
  src/v20230418/model/ModifyUserDirectoryResponse.cpp
  src/v20230418/model/ResetDeviceAccountPrivateKeyRequest.cpp
  src/v20230418/model/DeleteUserDirectoryResponse.cpp
  src/v20230418/model/CreateAssetSyncJobResponse.cpp
  src/v20230418/model/BindDeviceAccountPrivateKeyRequest.cpp
  src/v20230418/model/ModifyLDAPSettingRequest.cpp
  src/v20230418/model/ModifyChangePwdTaskRequest.cpp
  src/v20230418/model/CreateAssetSyncJobRequest.cpp
  src/v20230418/model/Group.cpp
  src/v20230418/model/UnlockUserResponse.cpp
  src/v20230418/model/DescribeAssetSyncStatusRequest.cpp
  src/v20230418/model/Clb.cpp
  src/v20230418/model/AccessDevicesResponse.cpp
  src/v20230418/model/DeleteUsersRequest.cpp
  src/v20230418/model/DeleteDeviceAccountsRequest.cpp
  src/v20230418/model/SearchTaskResultRequest.cpp
  src/v20230418/model/AuthModeSetting.cpp
  src/v20230418/model/DeleteDeviceGroupMembersResponse.cpp
  src/v20230418/model/ModifyDeviceGroupResponse.cpp
  src/v20230418/model/ModifyOAuthSettingResponse.cpp
  src/v20230418/model/DescribeOperationTaskRequest.cpp
  src/v20230418/model/LoginSetting.cpp
  src/v20230418/model/DescribeLDAPUnitSetResponse.cpp
  src/v20230418/model/DescribeUserGroupMembersResponse.cpp
  src/v20230418/model/UserDirectory.cpp
  src/v20230418/model/DescribeSecuritySettingResponse.cpp
  src/v20230418/model/DescribeDeviceGroupsRequest.cpp
  src/v20230418/model/ModifyAccessWhiteListRuleRequest.cpp
  src/v20230418/model/SearchSessionCommandResponse.cpp
  src/v20230418/model/DeleteAccessWhiteListRulesRequest.cpp
  src/v20230418/model/CheckLDAPConnectionRequest.cpp
  src/v20230418/model/User.cpp
  src/v20230418/model/ResetUserRequest.cpp
  src/v20230418/model/Device.cpp
  src/v20230418/model/DeleteUserGroupsRequest.cpp
  src/v20230418/model/CreateSyncUserTaskRequest.cpp
  src/v20230418/model/DescribeAccountGroupsResponse.cpp
  src/v20230418/model/SourceType.cpp
  src/v20230418/model/CreateDeviceAccountResponse.cpp
  src/v20230418/model/ExternalDevice.cpp
  src/v20230418/model/SearchSessionRequest.cpp
  src/v20230418/model/ModifyDeviceGroupRequest.cpp
  src/v20230418/model/Domain.cpp
  src/v20230418/model/Filter.cpp
  src/v20230418/model/DescribeUsersResponse.cpp
  src/v20230418/model/DeployResourceResponse.cpp
  src/v20230418/model/ModifyLDAPSettingResponse.cpp
  src/v20230418/model/SyncDevicesToIOAResponse.cpp
  src/v20230418/model/DescribeAssetSyncFlagRequest.cpp
  src/v20230418/model/CreateUserRequest.cpp
  src/v20230418/model/DescribeChangePwdTaskRequest.cpp
  src/v20230418/model/SearchFileBySidResponse.cpp
  src/v20230418/model/ModifyAuthModeSettingRequest.cpp
  src/v20230418/model/DescribeOperationEventRequest.cpp
  src/v20230418/model/SetLDAPSyncFlagRequest.cpp
  src/v20230418/model/LDAPSetting.cpp
  src/v20230418/model/ModifyDeviceResponse.cpp
  src/v20230418/model/ModifyUserResponse.cpp
  src/v20230418/model/ChangePwdTaskDetail.cpp
  src/v20230418/model/SearchSessionResponse.cpp
  src/v20230418/model/ModifyCmdTemplateRequest.cpp
  src/v20230418/model/CreateOperationTaskRequest.cpp
  src/v20230418/model/ModifyAclResponse.cpp
  src/v20230418/model/DescribeCmdTemplatesResponse.cpp
  src/v20230418/model/UnlockUserRequest.cpp
  src/v20230418/model/ReplayInformation.cpp
  src/v20230418/model/CreateDeviceAccountRequest.cpp
  src/v20230418/model/AddDeviceGroupMembersResponse.cpp
  src/v20230418/model/DeleteCmdTemplatesRequest.cpp
  src/v20230418/model/EnvInternetAccessSetting.cpp
  src/v20230418/model/DescribeUserGroupsResponse.cpp
  src/v20230418/model/DescribeUserDirectoryRequest.cpp
  src/v20230418/model/SyncUserToIOARequest.cpp
  src/v20230418/model/AddUserGroupMembersResponse.cpp
  src/v20230418/model/DescribeDeviceAccountsRequest.cpp
  src/v20230418/model/DescribeAssetSyncFlagResponse.cpp
  src/v20230418/model/DescribeUserSyncStatusResponse.cpp
  src/v20230418/model/DeleteChangePwdTaskRequest.cpp
  src/v20230418/model/ModifyUserGroupRequest.cpp
  src/v20230418/model/TaskResult.cpp
  src/v20230418/model/CreateChangePwdTaskRequest.cpp
  src/v20230418/model/SearchTaskResultResponse.cpp
  src/v20230418/model/SyncDevicesToIOARequest.cpp
  src/v20230418/model/LoginEvent.cpp
  src/v20230418/model/OAuthSetting.cpp
  src/v20230418/model/ReconnectionSetting.cpp
  src/v20230418/model/DeleteChangePwdTaskResponse.cpp
  src/v20230418/model/CreateUserGroupResponse.cpp
  src/v20230418/model/DeleteDevicesRequest.cpp
  src/v20230418/model/DescribeDeviceAccountsResponse.cpp
  src/v20230418/model/DescribeDomainsRequest.cpp
  src/v20230418/model/DescribeCmdTemplatesRequest.cpp
  src/v20230418/model/EnableIntranetAccessRequest.cpp
  src/v20230418/model/DescribeAclsRequest.cpp
  src/v20230418/model/EnableExternalAccessRequest.cpp
  src/v20230418/model/DeleteDeviceGroupsRequest.cpp
  src/v20230418/model/DescribeDeviceGroupMembersResponse.cpp
  src/v20230418/model/SearchAuditLogResponse.cpp
  src/v20230418/model/DescribeDepartmentsRequest.cpp
  src/v20230418/model/SessionResult.cpp
  src/v20230418/model/Resource.cpp
  src/v20230418/model/RunChangePwdTaskResponse.cpp
  src/v20230418/model/BindDeviceResourceRequest.cpp
  src/v20230418/model/CheckLDAPConnectionResponse.cpp
  src/v20230418/model/ModifyReconnectionSettingRequest.cpp
  src/v20230418/model/RunOperationTaskRequest.cpp
  src/v20230418/model/SubtaskResult.cpp
  src/v20230418/model/Acl.cpp
  src/v20230418/model/TagFilter.cpp
  src/v20230418/model/DescribeDevicesRequest.cpp
  src/v20230418/model/DepartmentManagerUser.cpp
  src/v20230418/model/ACTemplate.cpp
  src/v20230418/model/ModifyAccessWhiteListStatusRequest.cpp
  src/v20230418/model/SearchSessionCommandRequest.cpp
  src/v20230418/model/SearchFileBySidRequest.cpp
  src/v20230418/model/DescribeOperationEventResponse.cpp
  src/v20230418/model/DescribeDomainsResponse.cpp
  src/v20230418/model/EnableIntranetAccessResponse.cpp
  src/v20230418/model/ModifyUserDirectoryRequest.cpp
  src/v20230418/model/SearchFileResult.cpp
  src/v20230418/model/ReplaySessionResponse.cpp
  src/v20230418/model/AccountGroup.cpp
  src/v20230418/model/DeleteAclsResponse.cpp
  src/v20230418/model/DescribeDeviceGroupMembersRequest.cpp
  src/v20230418/model/DeleteDeviceGroupsResponse.cpp
  src/v20230418/model/AddDeviceGroupMembersRequest.cpp
  src/v20230418/model/DeleteDeviceAccountsResponse.cpp
  src/v20230418/model/DeleteAccessWhiteListRulesResponse.cpp
  src/v20230418/model/SearchFileResponse.cpp
  )

set(bh_include
    include/tencentcloud/bh
  )

add_library(bh ${LIB_TYPE}
  ${bh_public_header}
  ${bh_public_header_model}
  ${bh_src})

set_target_properties(bh
  PROPERTIES
  LINKER_LANGUAGE CXX
  ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
  LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
  RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
  OUTPUT_NAME ${TARGET_OUTPUT_NAME_PREFIX}bh
  )

target_include_directories(bh
  PRIVATE include
    ${CMAKE_SOURCE_DIR}/core/include
  )
target_link_libraries(bh
  core)

#install(FILES ${bh_public_header}
#  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/tencentcloud/bh/v20230418)
#install(FILES ${bh_public_header_model}
#  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/tencentcloud/bh/v20230418/model)
install(DIRECTORY ${bh_include}
  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/tencentcloud)

install(TARGETS bh
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
  )
